# terminal-render

./: README.md  main.py  pyproject.toml  test.py
TerminalRender/: __init__.py  palette.py
src/: __init__.py  types.py  window.py
termrender/: palette.py  window.py
