[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "termrender"
description = "Does rendering things in terminal"
readme = "README.md"
version = "v0.0.2"
authors = [{name = "Qubane"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.urls]
Repository = "https://github.com/UltraQbik/terminal-render"
